add values feature

--- a/internal/templates/base.templ
+++ b/internal/templates/base.templ
@@ -150,6 +150,7 @@ templ Base(title string, currentYear int) {
 				<nav>
 					<a href="/">Home</a>
 					<a href="/journals">Journals</a>
+<a href="/values">Values</a>
 				</nav>
 			</header>
 			<div class="container">
