--- a/internal/templates/home.templ
+++ b/internal/templates/home.templ
@@ -10,6 +10,9 @@ templ Home() {
 				<a href="/journals" style="text-decoration: none;">
 					<button>Go to Journals</button>
 				</a>
+				<a href="/values" style="text-decoration: none;">
+					<button>Go to Values</button>
+				</a>
 			</div>
 		</div>
 	}
