--- a/internal/templates/children.templ
+++ b/internal/templates/children.templ
@@ -5,7 +5,7 @@ import (
 	"time"
 )
 
-templ ChildrenPage(children []models.Value) {
+templ ChildrenPage(children []models.Aim) {
 	@Base("Children | Journal App", time.Now().Year()) {
 		<div>
 			<h1>Children</h1>
