--- a/internal/templates/home.templ
+++ b/internal/templates/home.templ
@@ -13,6 +13,9 @@ templ Home() {
 				<a href="/values" style="text-decoration: none;">
 					<button>Go to Values</button>
 				</a>
+				<a href="/plans" style="text-decoration: none;">
+					<button>Go to Plans</button>
+				</a>
 			</div>
 		</div>
 	}
