--- a/internal/templates/values.templ
+++ b/internal/templates/values.templ
@@ -6,7 +6,7 @@ import (
 	"time"
 )
 
-templ ValuesPage(values []models.Value) {
+templ ValuesPage(values []models.Aim) {
 	@Base("Values | Journal App", time.Now().Year()) {
 		<div>
 			<h1>Values</h1>
