--- a/internal/templates/base.templ
+++ b/internal/templates/base.templ
@@ -150,8 +150,8 @@ templ Base(title string, currentYear int) {
 				<nav>
 					<a href="/">Home</a>
 					<a href="/journals">Journals</a>
-<a href="/values">Values</a>
-				</nav>
+					<a href="/values">Values</a>
+					<a href="/plans">Plans</a>				</nav>
 			</header>
 			<div class="container">
 				{ children... }
