--- a/internal/templates/home.templ
+++ b/internal/templates/home.templ
@@ -16,6 +16,9 @@ templ Home() {
 				<a href="/plans" style="text-decoration: none;">
 					<button>Go to Plans</button>
 				</a>
+				<a href="/statements" style="text-decoration: none;">
+					<button>Go to Statements</button>
+				</a>
 			</div>
 		</div>
 	}
