--- a/internal/templates/base.templ
+++ b/internal/templates/base.templ
@@ -152,7 +152,8 @@ templ Base(title string, currentYear int) {
 					<a href="/journals">Journals</a>
 					<a href="/values">Values</a>
 					<a href="/plans">Plans</a>
-					<a href="/statements">Statements</a>				</nav>
+					<a href="/statements">Statements</a>
+					<a href="/behaviours">Behaviours</a>				</nav>
 			</header>
 			<div class="container">
 				{ children... }
