--- a/internal/templates/home.templ
+++ b/internal/templates/home.templ
@@ -19,6 +19,9 @@ templ Home() {
 				<a href="/statements" style="text-decoration: none;">
 					<button>Go to Statements</button>
 				</a>
+				<a href="/behaviours" style="text-decoration: none;">
+					<button>Go to Behaviours</button>
+				</a>
 			</div>
 		</div>
 	}
