--- a/internal/templates/parents.templ
+++ b/internal/templates/parents.templ
@@ -2,7 +2,7 @@ package templates
 
 import "time"
 
-import "test-go-htmx/internal/models"
+import "pds/internal/models"
 
 templ ParentsPage(parents []models.Aim) {
 	@Base("Parents | Journal App", time.Now().Year()) {
