--- a/internal/templates/behaviours.templ
+++ b/internal/templates/behaviours.templ
@@ -1,8 +1,8 @@
 package templates
 
 import (
+	"pds/internal/models"
 	"strconv"
-	"test-go-htmx/internal/models"
 	"time"
 )
 
@@ -26,12 +26,13 @@ templ BehavioursPage(behaviours []models.Behaviour, aims []models.Aim) {
 							<td>{ behaviour.Mark }</td>
 							<td>{ behaviour.ConflictingAimName }</td>
 							<td>
-								<button 
+								<button
 									hx-delete="/behaviours/delete"
 									hx-confirm="Are you sure you want to delete this behaviour?"
 									hx-target="closest tr"
 									hx-swap="outerHTML"
-									hx-vals={ `{"behaviourID": "` + strconv.FormatInt(behaviour.ID, 10) + `"}` }>
+									hx-vals={ `{"behaviourID": "` + strconv.FormatInt(behaviour.ID, 10) + `"}` }
+								>
 									Delete
 								</button>
 							</td>
@@ -42,28 +43,24 @@ templ BehavioursPage(behaviours []models.Behaviour, aims []models.Aim) {
 		</div>
 		<div>
 			<h2>Add a New Behaviour</h2>
-			<form 
-				hx-post="/behaviours/create" 
-				hx-target="#behaviours-list" 
-				hx-swap="outerHTML" 
-				hx-indicator="#spinner">
-				
+			<form
+				hx-post="/behaviours/create"
+				hx-target="#behaviours-list"
+				hx-swap="outerHTML"
+				hx-indicator="#spinner"
+			>
 				<label for="name">What is the behaviour you want to change?</label>
 				<input type="text" id="name" name="name" placeholder="e.g., Procrastination, Overeating, etc." required/>
-
 				<label for="description">Describe this behaviour and its impact:</label>
 				<textarea id="description" name="description" placeholder="How does this behaviour manifest and what effect does it have on your life?" required></textarea>
-				
 				<label for="mark">Mark (a sign to help you track this behaviour):</label>
 				<input type="text" id="mark" name="mark" placeholder="e.g., 🔴, ⚠️, or any tracking symbol"/>
-
 				<label for="conflictingAimID">Which value does this behaviour conflict with?</label>
 				<select id="conflictingAimID" name="conflictingAimID" required>
 					for _, aim := range aims {
 						<option value={ strconv.FormatInt(aim.ID, 10) }>{ aim.Name }</option>
 					}
 				</select>
-
 				<button type="submit">Add Behaviour</button>
 				<span id="spinner" class="htmx-indicator" style="display:none">Processing...</span>
 			</form>
