--- a/internal/templates/plans.templ
+++ b/internal/templates/plans.templ
@@ -1,8 +1,8 @@
 package templates
 
 import (
+	"pds/internal/models"
 	"strconv"
-	"test-go-htmx/internal/models"
 	"time"
 )
 
@@ -34,21 +34,16 @@ templ PlansPage(plans []models.Plan, values []models.Aim) {
 			<form method="POST" action="/plans/create">
 				<label for="name">What is the name of your plan?</label>
 				<input type="text" id="name" name="name" required/>
-				
 				<label for="valueID">Why is this plan important ?</label>
 				<select id="valueID" name="valueID" required>
 					for _, value := range values {
 						<option value={ strconv.FormatInt(value.ID, 10) }>{ value.Name }</option>
 					}
 				</select>
-
 				<label for="description">Describe your plan in detail.</label>
 				<textarea id="description" name="description" required></textarea>
-
 				<label for="resources">What resources are needed to execute this plan?</label>
 				<input type="text" id="resources" name="resources" required/>
-
-
 				<button type="submit">Create Plan</button>
 			</form>
 		</div>
